# ai-security

./: .gitignore  README.md  garak_exercise.ipynb
attestation/: README.md  makefile
attestation/tests/: test-cyclonedx-cli.sh  test-cyclonedx-container.sh  test-digest.sh  test-gpg.sh
breach/: README.md  docker-compose.yaml
pentest/: Dockerfile.attacker  README.md  docker-compose.yaml
pickle/: Dockerfile  README.md  makefile  pyproject.toml  tampering_pickle_files.ipynb
requirements/: README.md  install-cosign.sh  install-cyclonedx-cli.sh
ssh/: README.md  containerfile  dockerfile  makefile
threat_model/: .env  Makefile  docker-compose.yaml  example.env
threat_model/sample_tm/: Husky_AI.json
vuln_scanning/: README.md  makefile
